--- a/.github/workflows/breaking-changes.yml
+++ b/.github/workflows/breaking-changes.yml
@@ -31,4 +31,4 @@ jobs:
         if: ${{ github.event_name }} == 'pull_request'
         run: |
           git fetch origin '${{ github.event.pull_request.base.sha }}'
-          ~/.seekret/seekret spec-beta breaking-changes --github-token '${{ secrets.GITHUB_TOKEN }}' --github-pr '${{ github.event.pull_request.number }}' '${{ github.event.pull_request.base.sha }}' --no-impact
+          ~/.seekret/seekret spec-beta breaking-changes --github-token '${{ secrets.GITHUB_TOKEN }}' --github-pr '${{ github.event.pull_request.number }}' '${{ github.event.pull_request.base.sha }}'
